force-app/main/default/objects/ViewNotificationConfig__mdt/ViewNotificationConfig__mdt.object-meta.xml
<CustomObject>
    <label>表示通知</label>
</CustomObject>