force-app/main/default/objects/ViewNotificationConfig__mdt/fields/Interval__c.field-meta.xml
<CustomField>
    <fullName>Interval__c</fullName>
    <defaultValue>0</defaultValue>
    <description>双方向に通知する時間間隔（ミリ秒）を指定します。</description>
    <inlineHelpText>双方向に通知する時間間隔（ミリ秒）を指定します。</inlineHelpText>
    <label>Interval</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>