force-app/main/default/objects/ViewNotificationConfig__mdt/fields/IterationCount__c.field-meta.xml
<CustomField>
    <fullName>IterationCount__c</fullName>
    <defaultValue>20</defaultValue>
    <label>ループ回数</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>