force-app/main/default/objects/ViewNotificationConfig__mdt/fields/Precision__c.field-meta.xml
<CustomField>
    <fullName>Precision__c</fullName>
    <defaultValue>0</defaultValue>
    <description>双方向通信が発生しない場合にIntervalに加えてどの程度誤差を許容するかの時間（ミリ秒）を指定します。</description>
    <inlineHelpText>双方向通信が発生しない場合にIntervalに加えてどの程度誤差を許容するかの時間（ミリ秒）を指定します。</inlineHelpText>
    <label>Interval誤差</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>